Fixed overflow/scrolling

--- a/css/sass/_global.scss
+++ b/css/sass/_global.scss
@@ -26,6 +26,7 @@ body {
 	.light {
 		font-weight: 300;
 	}
+	overflow: hidden;
 }
 
 .modal {
