--- a/css/stylesheets/screen.css
+++ b/css/stylesheets/screen.css
@@ -76,6 +76,7 @@ body {
   font-size: 12pt;
   margin: 0px auto;
   color: #505657;
+  overflow: hidden;
 }
 /* line 10, ../sass/_global.scss */
 body a {
@@ -98,7 +99,7 @@ body .light {
   font-weight: 300;
 }
 
-/* line 31, ../sass/_global.scss */
+/* line 32, ../sass/_global.scss */
 .modal {
   position: absolute;
   text-align: center;
@@ -111,32 +112,32 @@ body .light {
   top: 25%;
   display: none;
 }
-/* line 42, ../sass/_global.scss */
+/* line 43, ../sass/_global.scss */
 .modal h2 {
   font-weight: 700;
   font-size: 18pt;
 }
-/* line 47, ../sass/_global.scss */
+/* line 48, ../sass/_global.scss */
 .modal h5 {
   font-weight: 300;
   font-size: 8pt;
 }
 
-/* line 53, ../sass/_global.scss */
+/* line 54, ../sass/_global.scss */
 .badge-modal {
   width: 200px;
   left: 50%;
   margin-left: -100px;
 }
 
-/* line 59, ../sass/_global.scss */
+/* line 60, ../sass/_global.scss */
 .leader-modal {
   width: 200px;
   left: 50%;
   margin-left: -100px;
 }
 
-/* line 65, ../sass/_global.scss */
+/* line 66, ../sass/_global.scss */
 .next {
   margin-top: 40px;
   display: none;
